Add automatic break countdown function

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a:active {
 
 #start {
     background-color: #c4e2c6;
-    margin: 25px 0;
+    margin: 25px 0 0;
     border: 3px solid #f3f3f3;
     font-size: 1.2em;
 }
